--- a/receiver/kafkametricsreceiver/metadata.yaml
+++ b/receiver/kafkametricsreceiver/metadata.yaml
@@ -23,15 +23,19 @@ metrics:
     enabled: true
     description: Number of brokers in the cluster.
     unit: "{brokers}"
-    gauge:
+    sum:
+      monotonic: false
       value_type: int
+      aggregation: cumulative
 #  topics scraper
   kafka.topic.partitions:
     enabled: true
     description: Number of partitions in topic.
     unit: "{partitions}"
-    gauge:
+    sum:
+      monotonic: false
       value_type: int
+      aggregation: cumulative
     attributes: [topic]
   kafka.partition.current_offset:
     enabled: true
@@ -58,16 +62,20 @@ metrics:
     enabled: true
     description: Number of synchronized replicas of partition
     unit: "{replicas}"
-    gauge:
+    sum:
+      monotonic: false
       value_type: int
+      aggregation: cumulative
     attributes: [topic, partition]
 #  consumers scraper
   kafka.consumer_group.members:
     enabled: true
     description: Count of members in the consumer group
     unit: "{members}"
-    gauge:
+    sum:
+      monotonic: false
       value_type: int
+      aggregation: cumulative
     attributes: [group]
   kafka.consumer_group.offset:
     enabled: true
