Revert "change expeced yaml"
This reverts commit c76f570c27f6ef69600fd96c13270301bf359211.

--- a/receiver/kafkametricsreceiver/testdata/integration/expected.yaml
+++ b/receiver/kafkametricsreceiver/testdata/integration/expected.yaml
@@ -3,8 +3,7 @@ resourceMetrics:
     scopeMetrics:
       - metrics:
           - description: Number of brokers in the cluster.
-            sum:
-              aggregationTemporality: 2
+            gauge:
               dataPoints:
                 - asInt: "1"
                   startTimeUnixNano: "1685063120199110000"
