--- a/.chloggen/fix-kafkametric-receiver-type.yaml
+++ b/.chloggen/fix-kafkametric-receiver-type.yaml
@@ -17,8 +17,7 @@ issues: [4327]
 # (Optional) One or more lines of additional information to render under the primary note.
 # These lines will be padded with 2 spaces and then inserted directly into the document.
 # Use pipe (|) for multiline entries.
-subtext: |
-Update the metric type in KafkaMetricsReceiver from "gauge" to "nonmonotonic sum".
+subtext: Update the metric type in KafkaMetricsReceiver from "gauge" to "nonmonotonic sum".
 
 
 
