--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -518,6 +518,7 @@ jobs:
           path: ./dist/*.msi
 
   publish-check:
+    if: false
     runs-on: ubuntu-latest
     needs: [build-package]
     steps:
@@ -538,7 +539,8 @@ jobs:
   publish-dev:
     runs-on: ubuntu-latest
     needs: [lint, unittest, integration-tests, build-package]
-    if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')) && github.repository == 'open-telemetry/opentelemetry-collector-contrib'
+    if: false
+    #if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')) && github.repository == 'open-telemetry/opentelemetry-collector-contrib'
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
@@ -602,7 +604,8 @@ jobs:
   publish-stable:
     runs-on: ubuntu-latest
     needs: [lint, unittest, integration-tests, build-package]
-    if: startsWith(github.ref, 'refs/tags/v') && github.repository == 'open-telemetry/opentelemetry-collector-contrib'
+    if: false
+    #if: startsWith(github.ref, 'refs/tags/v') && github.repository == 'open-telemetry/opentelemetry-collector-contrib'
     steps:
       - uses: actions/checkout@v3
       - name: Set Release Tag
