--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -516,104 +516,104 @@ jobs:
         with:
           name: collector-packages
           path: ./dist/*.msi
-#
-#  publish-check:
-#    runs-on: ubuntu-latest
-#    needs: [build-package]
-#    steps:
-#      - uses: actions/checkout@v3
-#      - name: Download Binaries
-#        uses: actions/download-artifact@v3
-#        with:
-#          name: collector-binaries
-#          path: ./bin/
-#      - name: Download Packages
-#        uses: actions/download-artifact@v3
-#        with:
-#          name: collector-packages
-#          path: ./dist/
-#      - name: Verify Distribution Files Exist
-#        id: check
-#        run: ./.github/workflows/scripts/verify-dist-files-exist.sh
-#  publish-dev:
-#    runs-on: ubuntu-latest
-#    needs: [lint, unittest, integration-tests, build-package]
-#    if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')) && github.repository == 'open-telemetry/opentelemetry-collector-contrib'
-#    steps:
-#      - uses: actions/checkout@v3
-#      - uses: actions/setup-go@v4
-#        with:
-#          go-version: 1.19
-#          cache: false
-#      - name: Mkdir bin and dist
-#        run: |
-#          mkdir bin/ dist/
-#      - name: Cache Go
-#        id: go-cache
-#        uses: actions/cache@v3
-#        with:
-#          path: |
-#            ~/go/bin
-#            ~/go/pkg/mod
-#          key: go-cache-${{ runner.os }}-${{ hashFiles('**/go.sum') }}
-#      - name: Install dependencies
-#        if: steps.go-cache.outputs.cache-hit != 'true'
-#        run: make -j2 gomoddownload
-#      - name: Install Tools
-#        if: steps.go-cache.outputs.cache-hit != 'true'
-#        run: make install-tools
-#      - name: Download Binaries
-#        uses: actions/download-artifact@v3
-#        with:
-#          name: collector-binaries
-#          path: ./bin/
-#      - run: chmod +x bin/*
-#      - name: Download Packages
-#        uses: actions/download-artifact@v3
-#        with:
-#          name: collector-packages
-#          path: ./dist/
-#      - name: Add Permissions to Tool Binaries
-#        run: chmod -R +x ./dist
-#      - name: Verify Distribution Files Exist
-#        id: check
-#        run: ./.github/workflows/scripts/verify-dist-files-exist.sh
-#      - name: Build Docker Image
-#        if: steps.check.outputs.passed == 'true'
-#        run: |
-#            make docker-otelcontribcol
-#            docker tag otelcontribcol:latest otel/opentelemetry-collector-contrib-dev:$GITHUB_SHA
-#            docker tag otelcontribcol:latest otel/opentelemetry-collector-contrib-dev:latest
-#      - name: Validate Docker Image
-#        if: steps.check.outputs.passed == 'true'
-#        run: |
-#            docker run otel/opentelemetry-collector-contrib-dev:$GITHUB_SHA --version
-#            docker run otel/opentelemetry-collector-contrib-dev:latest --version
-#      - name: Login to Docker Hub
-#        uses: docker/login-action@v2
-#        with:
-#          username: ${{ secrets.DOCKER_USERNAME }}
-#          password: ${{ secrets.DOCKER_PASSWORD }}
-#      - name: Push Docker Image
-#        if: steps.check.outputs.passed == 'true'
-#        run: |
-#            docker push otel/opentelemetry-collector-contrib-dev:$GITHUB_SHA
-#            docker push otel/opentelemetry-collector-contrib-dev:latest
-#  publish-stable:
-#    runs-on: ubuntu-latest
-#    needs: [lint, unittest, integration-tests, build-package]
-#    if: startsWith(github.ref, 'refs/tags/v') && github.repository == 'open-telemetry/opentelemetry-collector-contrib'
-#    steps:
-#      - uses: actions/checkout@v3
-#      - name: Set Release Tag
-#        id: github_tag
-#        run: ./.github/workflows/scripts/set_release_tag.sh
-#      - name: Create Github Release
-#        run: |
-#          gh release create $RELEASE_TAG -t $RELEASE_TAG -n "The OpenTelemetry Collector Contrib contains everything in the [opentelemetry-collector release](https://github.com/open-telemetry/opentelemetry-collector/releases/tag/$RELEASE_TAG), be sure to check the release notes there as well."
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          RELEASE_TAG: ${{ steps.github_tag.outputs.tag }}
+
+  publish-check:
+    runs-on: ubuntu-latest
+    needs: [build-package]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download Binaries
+        uses: actions/download-artifact@v3
+        with:
+          name: collector-binaries
+          path: ./bin/
+      - name: Download Packages
+        uses: actions/download-artifact@v3
+        with:
+          name: collector-packages
+          path: ./dist/
+      - name: Verify Distribution Files Exist
+        id: check
+        run: ./.github/workflows/scripts/verify-dist-files-exist.sh
+  publish-dev:
+    runs-on: ubuntu-latest
+    needs: [lint, unittest, integration-tests, build-package]
+    if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')) && github.repository == 'open-telemetry/opentelemetry-collector-contrib'
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
+        with:
+          go-version: 1.19
+          cache: false
+      - name: Mkdir bin and dist
+        run: |
+          mkdir bin/ dist/
+      - name: Cache Go
+        id: go-cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/go/bin
+            ~/go/pkg/mod
+          key: go-cache-${{ runner.os }}-${{ hashFiles('**/go.sum') }}
+      - name: Install dependencies
+        if: steps.go-cache.outputs.cache-hit != 'true'
+        run: make -j2 gomoddownload
+      - name: Install Tools
+        if: steps.go-cache.outputs.cache-hit != 'true'
+        run: make install-tools
+      - name: Download Binaries
+        uses: actions/download-artifact@v3
+        with:
+          name: collector-binaries
+          path: ./bin/
+      - run: chmod +x bin/*
+      - name: Download Packages
+        uses: actions/download-artifact@v3
+        with:
+          name: collector-packages
+          path: ./dist/
+      - name: Add Permissions to Tool Binaries
+        run: chmod -R +x ./dist
+      - name: Verify Distribution Files Exist
+        id: check
+        run: ./.github/workflows/scripts/verify-dist-files-exist.sh
+      - name: Build Docker Image
+        if: steps.check.outputs.passed == 'true'
+        run: |
+            make docker-otelcontribcol
+            docker tag otelcontribcol:latest otel/opentelemetry-collector-contrib-dev:$GITHUB_SHA
+            docker tag otelcontribcol:latest otel/opentelemetry-collector-contrib-dev:latest
+      - name: Validate Docker Image
+        if: steps.check.outputs.passed == 'true'
+        run: |
+            docker run otel/opentelemetry-collector-contrib-dev:$GITHUB_SHA --version
+            docker run otel/opentelemetry-collector-contrib-dev:latest --version
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push Docker Image
+        if: steps.check.outputs.passed == 'true'
+        run: |
+            docker push otel/opentelemetry-collector-contrib-dev:$GITHUB_SHA
+            docker push otel/opentelemetry-collector-contrib-dev:latest
+  publish-stable:
+    runs-on: ubuntu-latest
+    needs: [lint, unittest, integration-tests, build-package]
+    if: startsWith(github.ref, 'refs/tags/v') && github.repository == 'open-telemetry/opentelemetry-collector-contrib'
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set Release Tag
+        id: github_tag
+        run: ./.github/workflows/scripts/set_release_tag.sh
+      - name: Create Github Release
+        run: |
+          gh release create $RELEASE_TAG -t $RELEASE_TAG -n "The OpenTelemetry Collector Contrib contains everything in the [opentelemetry-collector release](https://github.com/open-telemetry/opentelemetry-collector/releases/tag/$RELEASE_TAG), be sure to check the release notes there as well."
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          RELEASE_TAG: ${{ steps.github_tag.outputs.tag }}
   rotate-milestone:
     # This job updates the "next release" milestone
     # to the latest released version and creates a new milestone
