--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -284,6 +284,7 @@ jobs:
             false
           fi
   coverage:
+    if: false
     runs-on: ubuntu-latest
     needs: [unittest]
     steps:
@@ -518,6 +519,7 @@ jobs:
           path: ./dist/*.msi
 
   publish-check:
+    if: false
     runs-on: ubuntu-latest
     needs: [build-package]
     steps:
@@ -536,9 +538,9 @@ jobs:
         id: check
         run: ./.github/workflows/scripts/verify-dist-files-exist.sh
   publish-dev:
+    if: false
     runs-on: ubuntu-latest
     needs: [lint, unittest, integration-tests, build-package]
-    if: (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')) && github.repository == 'open-telemetry/opentelemetry-collector-contrib'
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
@@ -600,9 +602,9 @@ jobs:
             docker push otel/opentelemetry-collector-contrib-dev:$GITHUB_SHA
             docker push otel/opentelemetry-collector-contrib-dev:latest
   publish-stable:
+    if: false
     runs-on: ubuntu-latest
     needs: [lint, unittest, integration-tests, build-package]
-    if: startsWith(github.ref, 'refs/tags/v') && github.repository == 'open-telemetry/opentelemetry-collector-contrib'
     steps:
       - uses: actions/checkout@v3
       - name: Set Release Tag
@@ -618,9 +620,9 @@ jobs:
     # This job updates the "next release" milestone
     # to the latest released version and creates a new milestone
     # named "next release" in its place
+    if: false
     runs-on: ubuntu-latest
     needs: [publish-stable]
-    if: startsWith(github.ref, 'refs/tags/v') && github.repository == 'open-telemetry/opentelemetry-collector-contrib'
     steps:
       - uses: actions/github-script@v6
         with:
