--- a/.github/workflows/build-and-test-windows.yml
+++ b/.github/workflows/build-and-test-windows.yml
@@ -1,12 +1,12 @@
 name: build-and-test-windows
 on:
+  schedule:
+    - cron: "* */3 * * *"
   push:
     branches: [ main ]
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+*'
   pull_request:
-  schedule:
-    - cron: '0 */3 * * *'
 env:
   TEST_RESULTS: testbed/tests/results/junit/results.xml
   # See: https://github.com/actions/cache/issues/810#issuecomment-1222550359
